--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,7 +43,8 @@
 }
 
 .song_page .comment_section .comment_box {
-    background-color: antiquewhite;
     width: 80%;
     height: 100px;
+    border:1rem solid;
+    margin: 2em;
 }
