--- a/templates/song.html
+++ b/templates/song.html
@@ -14,10 +14,10 @@
         </form>
     {% endif %}
     <div class="comment_section container">
-        {% for each in comments %}
+        {% for each in comments_list %}
             <div class="comment_box">
-                <h4 class="commenter"> {{ each[2] }}</h4>
-                <p class="comment">{{ each[0] }}</p>
+                <h4 class="commenter"> {{ each["username"] }}</h4>
+                <p class="comment">{{ each["message"] }}</p>
             </div>
         {% endfor %}
     </div>
