--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,36 @@
-.query_background {
-    width: 20rem;
+:root {
+    font-family: 'Ubuntu', sans-serif;
+    --desktop_w: 80rem;
 }
 
-.query-bg {
+body {
+    color: white;
+    background-color: #010001;
     display: flex;
-    min-height: 12rem;
+    flex-direction: column;
+    align-items: center;
+}
+
+.btn {
+    border-radius: 2%;
+}
+
+.navbar {
+    font-weight: bold;
+    text-transform: uppercase;
+    width: var(--desktop_w);
+    height: 83px;
+}
+
+.search-form {
+    display: flex;
+}
+
+
+.index header {
+    display: flex;
+    max-width: var(--desktop_w);
+    height: 158px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -12,17 +38,80 @@
     background-image: url(../images/hero.png);
 }
 
-.index .music_box {
-    width: 20rem;
+.index .rectangle {
+    max-width: var(--desktop_w);
+    height: 20px;
+    background-color: white;
+    color: #fafafa00;
+}
+
+.index main {
+    display: grid;
+    max-width: var(--desktop_w);
+    justify-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.rows_container {
+    display: flex;
+    justify-content: space-around;
+    max-width: var(--desktop_w);
+    height: 315px;
+    margin-bottom: 4px;
+
+}
+
+.post_container {
+    color: black;
+    position: relative;
+    border-radius: 10px;
+    border-top-left-radius: 0%;
+    top: 0px;
+    left: 0;
+    width: 19.5rem;
+    height: 315px;
+    background-color: white;
+}
+
+.post_container img {
+    cursor: pointer;
+    border-radius: 2px;
+    width: 318px;
+    height: 214px;
+}
+
+.post_container img:hover {
+    position: relative;
+    left: 10px;
+    bottom: 10px;
+    box-shadow: -10px 10px 4px #1d1f2c;
+}
+
+.post_container audio {
+    width: 100%;
+    padding: 5px;
+}
+
+
+.post_container h2 {
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    font-family: "Ubuntu";
+    padding-top: 6px;
+    font-size: 20px;
+
 }
 
 .song {
-
+    color: white;
     display: flex;
     justify-content: center;
 }
 
+
 .song .music_box {
+
     width: 25rem;
     display: flex;
     flex-direction: column;
@@ -31,20 +120,46 @@
 
 
 
-.index .img-fluid {
-    padding: 2rem 4rem;
-}
-
-
-.index figcaption h2 {
-    font-size: 1.2rem;
-    margin-top: 6px;
-    margin-bottom: 6px;
-}
-
 .song_page .comment_section .comment_box {
     width: 80%;
     height: 100px;
-    border:1rem solid;
+    border: white 0.5rem solid;
+    color: white;
     margin: 2em;
+}
+
+.wiki {
+    padding: 1rem 2rem;
+}
+
+@media(min-width:700px) {
+    .wiki {
+        padding: 1rem 10rem;
+    }
+}
+
+@media(max-width:1100px) {
+    :root {
+        --desktop_w: 100%;
+    }
+
+    .navbar-nav {
+        background-color: white;
+    }
+
+    .index main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .index main .post_container {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .index main .post_container figcaption h2 {
+        display: none;
+    }
+
 }
