--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,11 +8,15 @@
             {% block title %}
             {% endblock %}
         </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,400&family=Philosopher:wght@400;700&family=Roboto:ital,wght@0,100;1,500&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/style.css') }}">
 
     </head>
     <body>
+        
         <navbar class="navbar navbar-expand-md bg-light">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,6 +37,9 @@
                                 <a href="/logout" class="nav-link text-dark">logout</a>
                             </li>
                         {% endif %}
+                        <li>
+                            <a href="/wiki" class="nav-link text-dark">wiki</a>
+                        </li>
                     </ul>
                 </div>
         </navbar>
