--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
         <script
         type="text/javascript"
-        src="{{ url_for('static', filename='song.js') }}"    
+        src="{{ url_for('static', filename='app.js') }}"    
         >
         </script>
     </body>
